--- a/client/hook/meteoris_themeAdmin_hookSidebar.html
+++ b/client/hook/meteoris_themeAdmin_hookSidebar.html
@@ -28,8 +28,10 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
-                <!--Uncomment this if you want to use the power of meteoris:role and meteoris:user-->
+                <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+                <!--Uncomment this if you want to hide this menu using the power of meteoris:role-->
                 <!--{{#if meteoris_roleUserIsInGroup "admin"}}-->
+                <li class="header">ADMIN AREA</li>                
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-gears"></i>
